# mmkv-kotlin-multiplatform-binding

./: .gitignore  README.MD  README_CN.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/actions/setup-base/: action.yml
.github/actions/test-jvm/: action.yml
.github/workflows/: dokka.yaml  meta-setup-macos.yaml  meta-setup-windows.yaml  meta-test-android.yaml  meta-test-ios.yaml  meta-test-jvm.yaml  release.yaml  test.yaml
.github/workflows/meta/setup/: setup-linux.yaml  setup-macos.yaml  setup-windows.yaml
benchmark/: build.gradle.kts
benchmark/src/main/kotlin/: benchmark.kt
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: kotlin.kt  (+2 more)
core/: .gitignore  Module.md  build.gradle.kts
core-java/: build.gradle.kts
ext/: Module.md  build.gradle.kts
gradle/: libs.versions.toml
platform/MMKV_POSIX_FORK/: CMakeLists.txt
platform/platform-android/: build.gradle.kts
platform/platform-ios/: build.gradle.kts
platform/platform-linux/: build.gradle.kts
platform/platform-linux/native-binding-linux/: CMakeLists.txt
platform/platform-linux/native-binding-linux/src/: native-binding-linux.cpp
platform/platform-macos/: build.gradle.kts
platform/platform-macos/native-binding-macos/: CMakeLists.txt
platform/platform-macos/native-binding-macos/src/: native-binding-macos.cpp
platform/platform-windows/: build.gradle.kts
platform/platform-windows/native-binding-windows/: .gitignore  mmkvc.cpp  native-binding-windows.sln  native-binding-windows.vcxproj  native-binding-windows.vcxproj.filters
sample/composeApp/: build.gradle.kts
(+61 files in other folders)
